force-app/main/default/objects/ProductSubscription__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Create to assure an unique  Id for Upsert</description>
    <externalId>true</externalId>
    <label>External_Id</label>
    <length>37</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>