force-app/main/default/objects/ProductSubscription__c/fields/Number_of_Terms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Terms__c</fullName>
    <label>Number of Terms</label>
    <summaryForeignKey>ProductSubscriptionTerm__c.ProductSubscription__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>