force-app/main/default/objects/ProductSubscription__c/fields/SyncStatus__c.field-meta.xml
<CustomField>
    <fullName>SyncStatus__c</fullName>
    <description>if value is Out of sync this mean that  the Current Term is  outdated and need recalculation</description>
    <formula>IF
(
AND
   (
    CurrentSubscriptionTerm__r.StartDate__c &lt;= TODAY(),
     CurrentSubscriptionTerm__r.EndDate__c &gt;= TODAY()
   ),
&quot;in sync&quot;,
IF
  (
   CurrentSubscriptionTerm__c = NULL,
   &quot;in sync&quot;, 
   &quot;out of sync&quot;
  )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>if value is &quot;Out of sync &quot;this mean that  the Current Term is  outdated and need recalculation</inlineHelpText>
    <label>SyncStatus</label>
    <type>Text</type>
</CustomField>